--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,138 @@
-/* BASCIS */
+/*-----FIXING STUFF------*/
+*, *:before, *:after {
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+ }
+
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0;
+} 
+
+/*-----BASCIS------*/
 
 body {
-	background-color:palegoldenrod;
+/*	background-color: #FEFBEE;*/
+	background: radial-gradient(circle, rgba(255,255,255,1) 50%, rgba(247,202,18,1) 100%);
+	/*grey teal #476461*/
+	color: #333D3C;
+/*	font-family: 'Noto Sans', sans-serif;*/
+	font-family: 'Work Sans', sans-serif;
+	font-size: 18px;
 }
-
-h3 {
-	color:violet;
-}
-
 p {
-	line-height:25px;
-	font-family:arial;
+	line-height: 25px;
+}
+footer {
+	clear: both;
+	width: 100%; 
+/*	border: 1px solid papayawhip;*/
+  	text-align: center;
+  	font-size: 20px;
+  	font-weight: 100;
 }
 
-/* CLASSES ALONE */
-
-headerbox {
-  background:papayawhip;
-	width:1500px;
-	height:800px;
-  margin: 5%;
-	padding: 10%;
+footer, .hola-greeting {
+	font-family: 'Pacifico', cursive;
+}
+a {
+	color: black;
+	font-weight: bolder;
 }
 
-/* COMBOS OF CLASSES */
+/*------NAV HEADER------*/
+nav {
+	height: 50px;
+	width: 100%;
+	/*border: 1px solid lemonchiffon;*/
+	position: fixed;
+ 	left: 0;
+  	top: 0;
+}
+
+/*-----MAIN CONTENT BOX-----*/
+.content-box-all {
+	width: 100%;
+/*	border: 1px solid olive;*/
+	display: flex;
+/*	margin: 10% 0 10% 0;*/
+	padding: 8% 8% 8% 8%;
+	align-content: center;
+	justify-content: center;
+}
+.content-box-left, 
+.content-box-right {
+	justify-content: space-between;
+	display: flex;
+}
+
+/*------LEFT HAND BOX------*/
+.content-box-left {
+/*	border: 1px solid khaki;*/
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 450px
+}
+.item-left {
+	width: 100%;
+	padding: 3%;
+}
+.hola-greeting {
+	flex:1;
+/*	border: 1px solid palegoldenrod;*/
+	font-size: 75px;
+	
+	text-align: center;
+}
+.long-description {
+	flex:3;
+	text-align: justify;
+/*	border: 1px solid pink;*/
+}
+.long-description ul
+{
+	list-style-type:none;
+}
+.long-description li
+{
+	margin-bottom: 5px;
+}
+/*------RIGHT HAND BOX------*/
+.content-box-right {
+/*	border: 1px solid peachpuff;*/
+	flex-flow: row wrap;
+	justify-content: space-evenly;
+	align-items: center;
+	align-content: center;
+	padding: 5%;
+	width: 350px;
+}
+.item-right {
+	margin: 10%;
+}
+.item-right img {
+	max-width: 50px;
+	max-height: 50px;
+	filter: grayscale(100%);
+  	opacity: 0.8;
+}
+/*-----RESPONSIVENESS MEDIA QUERIES----*/
+/*Socials stack like a square*/
+/*@media only screen and (min-width: 751px) and (max-width: 1050px) {
+  .item-right {
+	margin: 10%;
+	}
+}*/
+/*Tablets*/
+@media only screen and (max-width: 750px) {
+/* 	.item-right {
+	margin: 10%;
+	}*/
+	.content-box-all {
+		flex-direction: column;
+	}
+}
