--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,8 @@
 /*-----BASCIS------*/
 
 body {
-/*	background-color: #FEFBEE;*/
 	background: radial-gradient(circle, rgba(255,255,255,1) 50%, rgba(247,202,18,1) 100%);
-	/*grey teal #476461*/
 	color: #333D3C;
-/*	font-family: 'Noto Sans', sans-serif;*/
 	font-family: 'Work Sans', sans-serif;
 	font-size: 18px;
 }
@@ -29,10 +26,11 @@ p {
 footer {
 	clear: both;
 	width: 100%; 
-/*	border: 1px solid papayawhip;*/
   	text-align: center;
   	font-size: 20px;
   	font-weight: 100;
+  	padding: 0px 10px;
+/*	border: 1px solid papayawhip;*/
 }
 
 footer, .hola-greeting {
@@ -47,55 +45,51 @@ a {
 nav {
 	height: 50px;
 	width: 100%;
-	/*border: 1px solid lemonchiffon;*/
 	position: fixed;
  	left: 0;
   	top: 0;
+	/*border: 1px solid lemonchiffon;*/
 }
 
 /*-----MAIN CONTENT BOX-----*/
 .content-box-all {
 	width: 100%;
-/*	border: 1px solid olive;*/
 	display: flex;
-/*	margin: 10% 0 10% 0;*/
-	padding: 8% 8% 8% 8%;
-	align-content: center;
+	flex-direction: column;
+	padding: 6% 8% 6% 8%;
+	align-items: center;
 	justify-content: center;
+/*	border: 1px solid pink;*/
 }
 .content-box-left, 
 .content-box-right {
-	justify-content: space-between;
 	display: flex;
+	max-width: 450px;
 }
 
 /*------LEFT HAND BOX------*/
 .content-box-left {
-/*	border: 1px solid khaki;*/
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	width: 450px
+/*	border: 1px solid khaki;*/
 }
 .item-left {
 	width: 100%;
 	padding: 3%;
 }
 .hola-greeting {
-	flex:1;
-/*	border: 1px solid palegoldenrod;*/
-	font-size: 75px;
-	
+	height: 100px;
+	font-size: 75px;	
 	text-align: center;
+/*	border: 1px solid palegoldenrod;*/
 }
 .long-description {
-	flex:3;
 	text-align: justify;
 /*	border: 1px solid pink;*/
 }
 .long-description ul
 {
 	list-style-type:none;
+	text-align: left;
 }
 .long-description li
 {
@@ -103,16 +97,13 @@ nav {
 }
 /*------RIGHT HAND BOX------*/
 .content-box-right {
-/*	border: 1px solid peachpuff;*/
 	flex-flow: row wrap;
-	justify-content: space-evenly;
+	justify-content: space-between;
 	align-items: center;
-	align-content: center;
-	padding: 5%;
-	width: 350px;
+/*	border: 1px solid peachpuff;*/
 }
 .item-right {
-	margin: 10%;
+	margin: 20px;
 }
 .item-right img {
 	max-width: 50px;
@@ -121,18 +112,24 @@ nav {
   	opacity: 0.8;
 }
 /*-----RESPONSIVENESS MEDIA QUERIES----*/
-/*Socials stack like a square*/
-/*@media only screen and (min-width: 751px) and (max-width: 1050px) {
-  .item-right {
-	margin: 10%;
-	}
-}*/
-/*Tablets*/
-@media only screen and (max-width: 750px) {
-/* 	.item-right {
-	margin: 10%;
-	}*/
-	.content-box-all {
-		flex-direction: column;
-	}
+
+@media only screen and (max-width: 600px)  and (min-width: 451px){
+body {
+	font-size: 0.95em;
 }
+}
+@media only screen and (max-width: 450px) {
+body {
+	font-size: 0.9em;
+}
+p {
+	line-height: 20px;
+}
+.content-box-right {
+	width: 200px;
+}
+.hola-greeting {
+	font-size: 50px;
+}
+}
+
